fix: section height on small screen

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -31,7 +31,13 @@ section {
   align-items: center;
   height: 85vh;
   text-align: center;
-  min-height: min-content;
+  min-height: fit-content;
+}
+
+@media (max-width: 768px) {
+  section {
+    height: 90vh;
+  }
 }
 
 h2 {
